# diplom

./: .gitignore  .pre-commit-config.yaml
.github/workflows/: ci-dev.yml  ci-main.yml  ci.yml
N2O-ContainerGuard/: Makefile  docker-compose.yml
N2O-ContainerGuard/services/scanner/: Dockerfile  README.md
N2O-ContainerGuard/services/scanner/app/: main.py  normalizer.py  schemas.py  storage.py  trivy_adapter.py
N2O-ConteinerGuard/: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  guincorn.py  payload.json  pyproject.toml  run_dev.py
N2O-ConteinerGuard/app/: main.py
N2O-ConteinerGuard/app/api/routers/: health.py
N2O-ConteinerGuard/app/core/: config.py  security.py
N2O-ConteinerGuard/backend/: alembic.ini  policies.yml  pyproject.toml
N2O-ConteinerGuard/backend/alembic/: env.py
N2O-ConteinerGuard/backend/alembic/versions/: 0001_create_reports_table.py
N2O-ConteinerGuard/backend/app/: main.py
N2O-ConteinerGuard/backend/app/api/v1/: evaluate.py  policies.py
N2O-ConteinerGuard/backend/app/core/: config.py  security.py
N2O-ConteinerGuard/backend/app/db/: models.py  repositories.py  session.py
N2O-ConteinerGuard/backend/app/domain/: analyzer.py  models.py  policy_templates.py  report_builder.py
N2O-ConteinerGuard/backend/app/integrations/: confluence_client.py  jira_client.py
N2O-ConteinerGuard/backend/policies_storage/projects/: example-service.yml
N2O-ConteinerGuard/backend/policy_templates/: baseline.yml  relaxed.yml  strict.yml
N2O-ConteinerGuard/backend/tests/: conftest.py  test_analyzer.py  test_config.py  test_confluence_client.py  test_evaluate_endpoint.py  test_jira_client.py  test_policies_endpoint.py  test_report_builder.py  test_repositories.py  test_security.py
N2O-ConteinerGuard/examples/ci/: github-actions-container-guard.yml
N2O-ConteinerGuard/tests/: test_health.py  test_security.py
theory/: recomends.txt  Презентация ВКР.pptx
