[project]
name = "n2o-conteinerguard"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksim Filippenko",email = "n2o.cake@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
package-mode = false

dependencies = [
    "fastapi (>=0.121.2,<0.122.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "pydantic-settings (>=2.6.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "asyncpg (>=0.29.0,<0.30.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pyjwt (>=2.9.0,<3.0.0)",
    "jwt (>=1.4.0,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
]

[tool.poetry]
package-mode = false

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
ignore = ["E402"]
# (опционально) ужесточи правила здесь, если надо:
# select = ["E", "F", "W", "B", "UP"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
development = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "ruff (>=0.14.5,<0.15.0)",
    "pre-commit (>=4.4.0,<5.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)"
]
